add new proyecto of a new page

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -111,6 +111,6 @@ h2{
     .inicio a:hover{
         color: blueviolet;
     }
-    .input-contenedor:hover{
+    .input-contenedor{
         transition: all ease-in-out .5s;
     }
