--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,8 +2,9 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: rgb(204,88,145);
-background: linear-gradient(90deg, rgba(204,88,145,1) 32%, rgba(52,156,116,1) 72%);
+    background-color: #120727;
+
+ 
 }
 
 *{
@@ -15,12 +16,12 @@ background: linear-gradient(90deg, rgba(204,88,145,1) 32%, rgba(52,156,116,1) 72
     padding: 15px;
 }
 .formulario{
-    background-color: aliceblue;
+    background-color: #FFFFFF;
     padding: 5px;
 }
 h1{
     text-align: center;
-    color: black;
+    color: #120727;
     font-size: 40px;
 }
 
@@ -33,18 +34,19 @@ input[type="text"], input[type="password"]{
 
 .input-contenedor{
     margin-bottom: 15px;
-    border: 1px solid #fff;
+    border: 1px solid #FFFFFF;
 }
 .incon{
     min-width: 50px;
     text-align: center;
     margin: 5px 0px;
+    padding: 5px;
 }
 .button{
     border: none;
     width: 100%;
     font-size: 20px;
-    color: black;
+    background-color: #CADE01 ;
     padding: 15px 20px;
     border-radius: 5px;
     cursor: pointer;
@@ -52,7 +54,7 @@ input[type="text"], input[type="password"]{
 }
 
 .button:hover{
-    background-color: blueviolet;
+    background-color: #6924A5;
 }
 
 p{
@@ -63,10 +65,10 @@ p{
 .link{
     text-decoration: none;
     cursor: pointer;
-    color: aqua;
+    color: #120727;
 }
 .link:hover{
-    color: blueviolet;
+    color: #6924A5;
 }
 .formulario{
     width: 500px;
@@ -87,7 +89,7 @@ header{
     justify-content: space-between;
     padding-top: 15px;
     width: 100%;
-    background-color: aliceblue;
+    background-color: #CADE01;
     box-shadow: 1px solid;
     margin-bottom: 20px;
 }
@@ -103,13 +105,13 @@ h2{
         padding: 30px;
         padding-right: 60px;
         text-decoration: none;
-        color: black;
+        color: #120727;
         font-size: 20px;
 
     }
 
     .inicio a:hover{
-        color: blueviolet;
+        color: #6924A5;
     }
     .input-contenedor{
         transition: all ease-in-out .5s;
