--- a/css/estilos.css
+++ b/css/estilos.css
@@ -119,6 +119,7 @@ ul, ol{
     margin-bottom: 30px;
     margin-left: 5px;
     border-radius: 10px;
+    
 }
 .contenedor-foto{
     width: 100%;
@@ -243,4 +244,42 @@ footer{
 
 .social-link a:hover{
     background-color:  #434343;
+}
+
+/* ################# PIE DE PAGINA ############## */
+
+@media screen and (max-width: 650px){
+    .mostrador{
+        width: 100%;
+        height: 1200px;
+
+       
+    }
+    .mostrador .ropa .item .contenedor-foto{
+        width: 70%;
+        flex-wrap: wrap;
+        padding: 0px;
+        margin: 0px;
+    }
+    .mostrador .ropa .item{
+        height: 400px;
+    }
+    .ropa{
+        padding-top: 20px;
+        padding-left: 60px;
+        flex-wrap: wrap;
+    }
+
+    .footer .footer-row{
+        padding-left: 50px;
+    }
+}
+
+@media screen and (max-width: 950px){
+ 
+
+    .contenedor-foto a{
+        font-size: 15px;
+        text-align: center;
+    }
 }
