--- a/css/estilo.css
+++ b/css/estilo.css
@@ -116,3 +116,27 @@ h2{
     .input-contenedor{
         transition: all ease-in-out .5s;
     }
+
+    @media screen and (max-width: 500px) {
+        header {
+         background-color: #120727;
+         color: #FFFFFF;
+         width: 100%;
+        }
+        .inicio a{
+            background-color: #CADE01;
+            padding: 2px;
+            font-size: 20px;
+        }
+
+       
+        
+    }
+
+    @media screen and (max-width: 759px) {
+        .inicio a{
+           margin-left: 5px;
+            padding: 5px;
+        }
+
+    }
