--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     font-family: sans-serif;
     background-color: #120727;
  
@@ -12,7 +12,7 @@ body{
 }
 
 .contenedor{
-    width: 100%px;
+    width: 100%;
     padding: 15px;
 }
 .formulario{
@@ -115,4 +115,30 @@ h2{
     }
     .input-contenedor{
         transition: all ease-in-out .5s;
+    }
+  
+
+    @media screen and (max-width: 500px) {
+        header {
+         background-color: #120727;
+         color: #FFFFFF;
+         width: 100%;
+        
+        }
+        .inicio a{
+            background-color: #CADE01;
+            padding: 2px;
+            font-size: 20px;
+        }
+
+       
+        
+    }
+
+    @media screen and (max-width: 759px) {
+        .inicio a{
+           margin-left: 5px;
+            padding: 5px;
+        }
+
     }
