--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,7 @@ body{
     width: 100%;
     background-color: aliceblue;
     font-family: sans-serif;
+    box-sizing: border-box;
 }
 
 header{
@@ -59,12 +60,20 @@ nav{
 
 /* ############NAVEGADOR ESTILOS ###################333 */
 
-#header {
+header {
     margin:auto;
     width: 100%;
     
 
 }
+.menu {
+    padding: 10px;
+    background-color: #120727;
+    display: none;
+}
+    
+
+
 
 ul, ol{
     list-style: none;
@@ -95,7 +104,82 @@ ul, ol{
     display: block;
 }
 
-/* ############ SECTION ################# */
+/* ############ SECTION 1 ################# */
+.section{
+    width: 100%;
+}
+.contenedor-section{
+    width: 95%;
+    height: 600px;
+    margin: 30px;
+    margin-right: 30px;
+   background-color: #ffffff;
+    
+}
+.contenedor-section .me-section{
+    display: flex;
+    width: 100%;
+    
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
+    
+}
+.contenedor-section .me-section .section-row{
+    width: 50%;
+    height: 300px;
+    
+    align-items: center;
+    
+}
+.contenedor-section .me-section .section-row h2{
+    font-size: 30px;
+    font-weight: 600;
+    margin-top: 40px;
+    padding-bottom: 15px;
+}
+
+.contenedor-section .me-section .section-row p{
+    padding: 15px 0px 15px 5px ;
+    font-size: 20px;
+
+}
+.contenedor-section .me-section .section-row .boton{
+   width: 20%;
+   margin: 15px 5px 15px 5px ;
+   text-align: center;
+   border-radius: 10px;
+   background-color: #CADE01;
+   
+}
+.contenedor-section .me-section .section-row .boton:hover{
+    background-color: #879210a1;
+    
+ }
+.contenedor-section .me-section .section-row .boton a{
+    text-decoration: none;
+    color: #120727;
+    font-size: 20px;
+}
+.contenedor-section .me-section img {
+   width: 360px;
+   height: 360px;
+   animation: myAnim 1s ease 0s 1 normal forwards;
+   
+}
+@keyframes myAnim {
+	0% {
+		opacity: 0;
+		transform: scale(1.4);
+	}
+
+	100% {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
+
+/* ############ SECTION 2 ################# */
 
 .contenido{
     background-color: #FFFFFF;
@@ -248,6 +332,9 @@ footer{
 
 /* ################# MEDIA QUERYS ############## */
 
+
+
+
 @media screen and (max-width: 1049px) {
     
     
@@ -288,6 +375,10 @@ footer{
     .footer .footer-row{
         padding-left: 50px;
     }
+
+    /*section1 */
+
+
     
 }
 
@@ -321,6 +412,21 @@ footer{
     .footer .footer-row{
         padding-left: 50px;
     }
+    .section .contenedor-section{
+        width: 100%;
+        margin: 10px;
+    }
+    .contenedor-section .me-section img{
+        width: 250px;
+        height: 250px;
+    }
+    .contenedor-section .me-section .section-row h2{
+        font-size: 30px;
+    }
+    .contenedor-section .me-section .section-row  a, p{
+        font-size: 15px;
+    }
+    
 }
 
 @media screen and (max-width: 650px){
@@ -355,6 +461,20 @@ footer{
 
     .footer .footer-row{
         padding-left: 50px;
+    }
+    .contenedor-section{
+        width: 100%;
+        margin: 0px;
+    }
+    .contenedor-section .me-section img{
+        width: 250px;
+        height: 250px;
+    }
+    .contenedor-section .me-section .section-row h2{
+        font-size: 30px;
+    }
+    .contenedor-section .me-section .section-row  a, p{
+        font-size: 15px;
     }
 }
 
@@ -399,6 +519,30 @@ footer{
         width: 80%;
        
         text-align: center;
+    }
+    .contenedor-section{
+        width: 100%;
+        margin: 0px;
+        text-align: center;
+    }
+    .contenedor-section .me-section{
+        display: inline-block;
+
+        
+    }
+    .contenedor-section .me-section img{
+        width: 250px;
+        height: 250px;
+
+    }
+    .contenedor-section .me-section .section-row {
+        width: 100%;
+        text-align: center;
+        height: 200px;
+    }
+    .contenedor-section .me-section .section-row  .boton{
+        width: 80%;
+        margin-left: 52px;
     }
     
 }
