--- a/css/estilos.css
+++ b/css/estilos.css
@@ -184,15 +184,20 @@ ul, ol{
 
 .contenido{
     background-color: #FFFFFF;
-    max-width: 1100px;
+    max-width: 1200px;
     width: 100%;
     margin: 40px auto;
     display: flex ;
 }
+.contenido img{
+    width: 100%;
+    height: 140px;
+    margin-bottom: 30px;
+}
 
 .mostrador{
     width: 100%;
-    height: 400px;
+    height: 500px;
     transition: .5s ease;
     overflow: hidden;
     border-radius: 10px;
@@ -416,7 +421,7 @@ footer{
     
     .mostrador{
         width: 100%;
-        height: 360px;
+        height: 600px;
 
        
     }
@@ -463,9 +468,7 @@ footer{
   
     .mostrador{
         width: 100%;
-        height: 820px;
-
-       
+        height: 1000px;
     }
     .mostrador .ropa .item .contenedor-foto{
         width: 100%;
@@ -516,7 +519,7 @@ footer{
     */
     .mostrador{
         width: 100%;
-        height: 830px;
+        height: 1000px;
 
        
     }
@@ -572,7 +575,7 @@ footer{
     
     .mostrador{
         width: 100%;
-        height: 1200px;
+        height: 1380px;
         overflow: hidden;
 
        
@@ -644,6 +647,7 @@ footer{
         font-size: 25px;
         text-align: center;
        padding-top: 10px;
+       margin-bottom: 10px;
         
         
     }
