--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,6 +16,14 @@ body{
     text-align: center;
     
 }
+.contendor{
+    width: 100%;
+    height: 640px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
+}
 
 h1{
     text-align: center;
@@ -69,13 +77,7 @@ p{
 .link:hover{
     color: #6924A5;
 }
-.contendor{
-    width: 100%;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-}
+
 .formulario{
     width: 380px;
     height: 500px;
